Removed rider generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,8 @@ ehthumbs.db
 Corridor/Library/ShaderCache/
 Corridor/Library/metadata/
 .DS_Store
+
+# =============== #
+# Rider generated #
+# =============== #
+.idea/
