Created gravity field stamina 'bar'

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ Corridor/Library/metadata/
 # Rider generated #
 # =============== #
 .idea/
+
+# ====== #
+# Builds #
+# ====== #
+MovementDemo_Data/
